[gd_scene load_steps=27 format=3 uid="uid://buk1mwkjg5qs5"]

[ext_resource type="Script" path="res://Scenes/Main.gd" id="1_8beko"]
[ext_resource type="Texture2D" uid="uid://uu1x5ekgwkaj" path="res://Textures/GreyboxTextures/greybox_grey_grid.png" id="1_n8c2h"]
[ext_resource type="PackedScene" uid="uid://dmo4f5etms210" path="res://Player/Player.tscn" id="1_yuldt"]
[ext_resource type="Texture2D" uid="uid://drcf2w5h5d4t3" path="res://Textures/GreyboxTextures/greybox_light_grid.png" id="2_b0fse"]
[ext_resource type="PackedScene" uid="uid://cio06nhtrxoas" path="res://Items/mirror.tscn" id="4_csqvo"]
[ext_resource type="Texture2D" uid="uid://ygwfwbmvtjvf" path="res://Textures/GreyboxTextures/greybox_green_grid.png" id="4_rqr4m"]
[ext_resource type="Texture2D" uid="uid://cx60npl6y3iq4" path="res://Textures/GreyboxTextures/greybox_blue_grid.png" id="5_5oi23"]
[ext_resource type="PackedScene" uid="uid://c2cwscslukr8p" path="res://Items/Interactables/PC.tscn" id="7_sty5q"]
[ext_resource type="PackedScene" uid="uid://dattjjxsgkuoe" path="res://Items/Interactables/PC_Text.tscn" id="8_73htx"]
[ext_resource type="PackedScene" uid="uid://bfsrx1d4fd7to" path="res://NPC/NPC3.tscn" id="9_r0hax"]
[ext_resource type="JSON" path="res://Dialogue/JSONS/NeilDialogue.json" id="10_71wio"]
[ext_resource type="PackedScene" uid="uid://bxj42jeypgffr" path="res://NPC/NPC2.tscn" id="12_tf4r3"]
[ext_resource type="JSON" path="res://Dialogue/JSONS/ClaudiaDialogue.json" id="13_bo7eb"]
[ext_resource type="PackedScene" uid="uid://dp5rls24av8vb" path="res://Items/Interactables/NeilAnniversaryGift.tscn" id="14_mxh22"]
[ext_resource type="PackedScene" uid="uid://ts7p70ixs7sa" path="res://Items/Interactables/TestPickup.tscn" id="15_rbt6d"]
[ext_resource type="PackedScene" uid="uid://3rt8wqvh0f6i" path="res://NPC/NPC1.tscn" id="16_bcpjj"]
[ext_resource type="JSON" path="res://Dialogue/JSONS/JohnDialogue.json" id="17_qcalm"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ear7v"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_hnajm"]
sky_material = SubResource("ProceduralSkyMaterial_ear7v")

[sub_resource type="Environment" id="Environment_0w227"]
background_mode = 2
sky = SubResource("Sky_hnajm")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gfp1p"]
albedo_color = Color(0.494118, 0.494118, 0.494118, 1)
albedo_texture = ExtResource("1_n8c2h")
uv1_scale = Vector3(50, 50, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d356m"]
albedo_texture = ExtResource("2_b0fse")
uv1_scale = Vector3(2, 2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bqsaw"]
albedo_texture = ExtResource("4_rqr4m")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t8ajw"]
albedo_texture = ExtResource("5_5oi23")

[sub_resource type="ViewportTexture" id="ViewportTexture_ua7r0"]
viewport_path = NodePath("SubViewport/SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_nlnef"]
size = Vector3(1, 1, 0.612874)

[node name="Main" type="Node3D"]
script = ExtResource("1_8beko")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0w227")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="CSGBox3D" parent="Environment"]
transform = Transform3D(236.517, 0, 0, 0, 0.03, 0, 0, 0, 145.253, 0, 0, 0)
use_collision = true
size = Vector3(1, 0.002, 1)
material = SubResource("StandardMaterial3D_gfp1p")

[node name="Room" type="Node3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.03417, 0, -1.60249)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(2.19329, 0, 0, 0, 0.366156, 0, 0, 0, 0.169766, 0, 2.75145, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D2" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, 1.28066, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D9" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, -1.26415, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D4" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, -2.79656, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D5" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, 2.85422, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D6" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(-1.71781e-07, -8.28356, 0, 3.92989, -3.62086e-07, 0, 0, 0, 0.169766, 0.0155642, 2, 8.00464)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D7" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, -4.18014, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D8" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, 4.33079, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D10" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(-1.28263, 0, 0.0349624, 0, 0.464364, 0, -0.0131187, 0, -3.41833, 3.46257, 0.693285, 2.57418)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D11" type="CSGBox3D" parent="Environment/Room"]
transform = Transform3D(-1.28263, 0, 0.0349624, 0, 0.464364, 0, -0.0131187, 0, -3.41833, -3.19343, 0.214338, 5.67669)
use_collision = true
material = SubResource("StandardMaterial3D_t8ajw")

[node name="Room4" type="Node3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.03417, 0, -12.6025)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(2.19329, 0, 0, 0, 0.366156, 0, 0, 0, 0.169766, 0, 2.75145, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D2" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, 1.28066, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D9" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, -1.26415, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D4" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, -2.79656, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D5" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, 2.85422, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D6" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(-1.71781e-07, -8.28356, 0, 3.92989, -3.62086e-07, 0, 0, 0, 0.169766, 0.0155642, 2, 8.00464)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D7" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, -4.18014, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D8" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, 4.33079, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D10" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(-1.28263, 0, 0.0349624, 0, 0.464364, 0, -0.0131187, 0, -3.41833, 3.46257, 0.693285, 2.57418)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D11" type="CSGBox3D" parent="Environment/Room4"]
transform = Transform3D(-1.28263, 0, 0.0349624, 0, 0.464364, 0, -0.0131187, 0, -3.41833, -3.19343, 0.214338, 5.67669)
use_collision = true
material = SubResource("StandardMaterial3D_t8ajw")

[node name="Room5" type="Node3D" parent="Environment"]
transform = Transform3D(-9.3328e-08, 0, 2.13509, 0, 2.13509, 0, -2.13509, 0, -9.3328e-08, -6.03417, 0, -27.6025)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(2.19329, 0, 0, 0, 0.366156, 0, 0, 0, 0.169766, 0, 2.75145, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D2" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, 1.28066, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D9" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, -1.26415, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D4" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, -2.79656, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D5" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, 2.85422, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D6" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(-1.71781e-07, -8.28356, 0, 3.92989, -3.62086e-07, 0, 0, 0, 0.169766, 0.0155642, 2, 8.00464)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D7" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, -4.18014, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D8" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, 4.33079, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D12" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(0.600737, 0, -0.0163752, 0, 0.217491, 0, 0.00614437, 0, 1.60102, -1.31759, 0.324709, 5.8257)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D13" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(0.600737, 0, -0.0163752, 0, 0.217491, 0, 0.00614437, 0, 1.60102, -0.380858, 0.324709, 5.8257)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D14" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(0.600737, 0, -0.0163752, 0, 0.217491, 0, 0.00614437, 0, 1.60102, 0.555869, 0.324709, 5.8257)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D15" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(0.600737, 0, -0.0163752, 0, 0.217491, 0, 0.00614437, 0, 1.60102, 1.4926, 0.324709, 5.8257)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D16" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(0.600737, 0, -0.0163752, 0, 0.217491, 0, 0.00614437, 0, 1.60102, -1.31759, 0.324709, 3.01552)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D17" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(0.600737, 0, -0.0163752, 0, 0.217491, 0, 0.00614437, 0, 1.60102, -0.380859, 0.324709, 3.01552)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D18" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(0.600737, 0, -0.0163752, 0, 0.217491, 0, 0.00614437, 0, 1.60102, 0.555868, 0.324709, 3.01552)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D19" type="CSGBox3D" parent="Environment/Room5"]
transform = Transform3D(0.600737, 0, -0.0163752, 0, 0.217491, 0, 0.00614437, 0, 1.60102, 1.4926, 0.324709, 3.01552)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="Room2" type="Node3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.66383, 0, -1.60249)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(2.19329, 0, 0, 0, 0.366156, 0, 0, 0, 0.169766, 0, 2.75145, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D2" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, 1.28066, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D9" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, -1.26415, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D4" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, -2.79656, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D5" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, 2.85422, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D6" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(-1.71781e-07, -8.28356, 0, 3.92989, -3.62086e-07, 0, 0, 0, 0.169766, 0.0155642, 2, 8.00464)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D7" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, -4.18014, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D8" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, 4.33079, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D10" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(-1.28263, 0, 0.0349624, 0, 0.464364, 0, -0.0131187, 0, -3.41833, 3.46257, 0.693285, 2.57418)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D11" type="CSGBox3D" parent="Environment/Room2"]
transform = Transform3D(-1.28263, 0, 0.0349624, 0, 0.464364, 0, -0.0131187, 0, -3.41833, -3.19343, 0.214338, 5.67669)
use_collision = true
material = SubResource("StandardMaterial3D_t8ajw")

[node name="Room3" type="Node3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.66383, 0, -12.6025)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(2.19329, 0, 0, 0, 0.366156, 0, 0, 0, 0.169766, 0, 2.75145, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D2" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, 1.28066, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D9" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(-1.49831e-07, -0.366156, 0, 3.42774, -1.60052e-08, 0, 0, 0, 0.169766, -1.26415, 1.72476, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D4" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, -2.79656, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D5" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(-1.71781e-07, -2.73297, 0, 3.92989, -1.19462e-07, 0, 0, 0, 0.169766, 2.85422, 2, 0)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D6" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(-1.71781e-07, -8.28356, 0, 3.92989, -3.62086e-07, 0, 0, 0, 0.169766, 0.0155642, 2, 8.00464)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D7" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, -4.18014, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D8" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(7.50878e-15, 3.62086e-07, 0.169766, 3.92989, -3.62086e-07, 0, 1.71781e-07, 8.28356, -7.42073e-09, 4.33079, 2, 4.04298)
use_collision = true
material = SubResource("StandardMaterial3D_d356m")

[node name="CSGBox3D10" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(-1.28263, 0, 0.0349624, 0, 0.464364, 0, -0.0131187, 0, -3.41833, 3.46257, 0.693285, 2.57418)
use_collision = true
material = SubResource("StandardMaterial3D_bqsaw")

[node name="CSGBox3D11" type="CSGBox3D" parent="Environment/Room3"]
transform = Transform3D(-1.28263, 0, 0.0349624, 0, 0.464364, 0, -0.0131187, 0, -3.41833, -3.19343, 0.214338, 5.67669)
use_collision = true
material = SubResource("StandardMaterial3D_t8ajw")

[node name="PC" parent="." instance=ExtResource("7_sty5q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.78546, 1.40771, -5.09814)

[node name="Player" parent="." instance=ExtResource("1_yuldt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Skeleton3D" parent="Player/Mesh/Player/RootNode/master/Reference" index="0"]
bones/0/position = Vector3(0.0560927, 0.927167, -0.0609207)
bones/0/rotation = Quaternion(-0.684919, -0.247112, -0.270841, 0.629657)
bones/1/rotation = Quaternion(0.457915, 0.492916, 0.499684, -0.545586)
bones/2/rotation = Quaternion(0.0812586, 0.0256702, 0.0111967, 0.9963)
bones/3/rotation = Quaternion(0.0817213, 0.12358, 0.00799301, 0.988932)
bones/4/rotation = Quaternion(-0.0104284, 0.21181, -0.00309796, 0.97725)
bones/5/rotation = Quaternion(0.172307, -0.222947, 0.0376374, 0.958743)
bones/9/rotation = Quaternion(-0.0102353, 0.0789663, -0.791531, 0.60592)
bones/10/rotation = Quaternion(0.0865835, -0.171755, -0.451795, 0.87114)
bones/11/rotation = Quaternion(0.00425519, 0.364727, -0.0608003, 0.929118)
bones/12/rotation = Quaternion(-0.0898155, 0.0323251, -0.10581, 0.989794)
bones/14/rotation = Quaternion(0.0345412, 0.291998, -0.189783, 0.936764)
bones/15/rotation = Quaternion(0.0392624, -0.188567, 0.0021003, 0.981273)
bones/16/rotation = Quaternion(0.0203425, -0.0551319, -0.0821203, 0.994888)
bones/19/rotation = Quaternion(-0.0220782, -0.173129, 0.009994, 0.984601)
bones/20/rotation = Quaternion(-0.00055468, -0.000664546, -0.146492, 0.989212)
bones/21/rotation = Quaternion(0.00448027, -0.0351255, 0.000662117, 0.999373)
bones/23/rotation = Quaternion(0.0115527, 0.0447085, -0.105378, 0.99336)
bones/24/rotation = Quaternion(0.00223452, 0.0312509, -0.279784, 0.959552)
bones/25/rotation = Quaternion(-0.0017656, 0.00884556, 0.0306743, 0.999489)
bones/27/rotation = Quaternion(-0.0117626, 0.00677885, -0.190716, 0.981551)
bones/28/rotation = Quaternion(-0.00429023, 0.0516847, -0.326843, 0.943655)
bones/29/rotation = Quaternion(0.0141726, -0.0499477, -0.0121731, 0.998577)
bones/32/rotation = Quaternion(-0.0322059, 0.221323, -0.126438, 0.966433)
bones/33/rotation = Quaternion(-0.00867932, 0.0851476, -0.354389, 0.931173)
bones/34/rotation = Quaternion(0.0107329, -0.0595554, 0.0194228, 0.997978)
bones/36/rotation = Quaternion(0.782638, -0.619816, -0.0536922, 0.0205715)
bones/37/rotation = Quaternion(0.0987273, 0.0619811, -0.473214, 0.873201)
bones/38/rotation = Quaternion(-0.0634718, 0.416904, 0.00679509, 0.906706)
bones/39/rotation = Quaternion(-0.161472, -0.054835, 0.119505, 0.978079)
bones/41/rotation = Quaternion(-0.729823, 0.363185, -0.00884749, 0.579117)
bones/42/rotation = Quaternion(0.0378004, -0.00668672, -0.00106256, 0.999262)
bones/43/rotation = Quaternion(0.0203425, 0.0821203, -0.0551319, 0.994888)
bones/46/rotation = Quaternion(-0.028501, -0.101907, 0.00494091, 0.994373)
bones/47/rotation = Quaternion(0.000220029, 0.00425449, -0.154944, 0.987914)
bones/48/rotation = Quaternion(0.00448027, -0.0351255, 0.000662117, 0.999373)
bones/50/rotation = Quaternion(-0.00172361, -0.00239847, -0.131005, 0.991377)
bones/51/rotation = Quaternion(0.00207418, 0.0245695, -0.19977, 0.979533)
bones/52/rotation = Quaternion(-0.0017656, 0.00884556, 0.0306743, 0.999489)
bones/54/rotation = Quaternion(0.00934083, -0.0411793, -0.274253, 0.96073)
bones/55/rotation = Quaternion(-0.0036537, 0.0396214, -0.284643, 0.957807)
bones/56/rotation = Quaternion(0.0141726, -0.0499477, -0.0121731, 0.998577)
bones/59/rotation = Quaternion(-0.0289405, 0.165274, -0.232359, 0.958048)
bones/60/rotation = Quaternion(-0.00774084, 0.0651241, -0.344049, 0.936659)
bones/61/rotation = Quaternion(0.0107329, -0.0595554, 0.0194228, 0.997978)
bones/63/rotation = Quaternion(-0.366859, 0.631922, 0.490213, 0.475164)
bones/64/rotation = Quaternion(0.0765438, -0.307871, -0.00622058, 0.948324)
bones/65/rotation = Quaternion(-0.442102, 0.581141, 0.420723, 0.538343)
bones/66/rotation = Quaternion(0.00361983, -0.00203922, 0.0786054, 0.996897)
bones/68/rotation = Quaternion(0.360006, -0.394813, 0.688168, 0.49086)
bones/69/rotation = Quaternion(-0.120412, -0.32014, -0.0622354, 0.937623)
bones/70/rotation = Quaternion(-0.541315, 0.464683, 0.405159, 0.571746)
bones/71/rotation = Quaternion(-0.0174664, 0.0236912, 0.0828859, 0.996124)

[node name="PC2" parent="." instance=ExtResource("8_73htx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12.101, 1.408, 1.80676)
text = "Email:
From: kenneth76@incognita.com to: neilgarmen@incognita.com
Hey Neil,
I am messaging you to ask to check in with John. He has been very anxious lately. I feel he may want to do something rash. PLEASE talk to him before reporting ANYTHING. I hope he calms down in the next few days but please do speak to him QUICK.
Regards,
Kenneth"

[node name="Sprite3D" parent="PC2/Computer/Computer/RootNode/PC" index="5"]
texture = SubResource("ViewportTexture_ua7r0")

[node name="PassWordViewport" parent="PC2" index="3"]
password = "iluvclaudia"

[node name="Neil" parent="." node_paths=PackedStringArray("textbox") instance=ExtResource("9_r0hax")]
transform = Transform3D(-0.999445, 0, -0.0333123, 0, 1, 0, 0.0333123, 0, -0.999445, -11.9727, 3.02315e-05, 0.676882)
textbox = NodePath("../Player/Head/TextBox")
dialogue_json = ExtResource("10_71wio")

[node name="Claudia" parent="." node_paths=PackedStringArray("textbox") instance=ExtResource("12_tf4r3")]
transform = Transform3D(0.0363995, 0, -0.999337, 0, 1, 0, 0.999337, 0, 0.0363995, -8.99152, 0.160101, -9.96174)
textbox = NodePath("../Player/Head/TextBox")
dialogue_json = ExtResource("13_bo7eb")
voiceID = 6

[node name="John" parent="." node_paths=PackedStringArray("textbox") instance=ExtResource("16_bcpjj")]
transform = Transform3D(0.591352, 0, -0.806414, 0, 1, 0, 0.806414, 0, 0.591352, 1.14547, 3.02124e-05, -15.7717)
textbox = NodePath("../Player/Head/TextBox")
dialogue_json = ExtResource("17_qcalm")
voiceID = 5

[node name="AnniversaryGift" parent="." instance=ExtResource("14_mxh22")]
transform = Transform3D(0.217171, 0, 0, 0, 0.217171, 0, 0, 0, 0.0992264, 7.6282, 0.949788, -24.9077)
stateString = ""
prompt_message = "Pickup"

[node name="CollisionShape3D" parent="AnniversaryGift" index="0"]
transform = Transform3D(3.72608, 0, 0, 0, 3.72608, 0, 0, 0, 3.72608, 0, 0.805835, 0)

[node name="PostIt" parent="." instance=ExtResource("15_rbt6d")]
transform = Transform3D(0.541839, 0, 0, 0, 0.0764146, 0, 0, 0, 0.25556, -11.0124, 0.925467, -9.08535)
PickUpDialogue = "A post-it that says:
    psswd: iluvclaudia"

[node name="Mirror" parent="." instance=ExtResource("4_csqvo")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.549141, 1.52705, -5.84246)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.73209, 1.50876, -3.95729)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.30904)
shape = SubResource("BoxShape3D_nlnef")

[connection signal="custom_signal_received" from="Player/Head/TextBox/EzDialogue" to="." method="_on_ez_dialogue_custom_signal_received"]
[connection signal="correctpass" from="PC2/PassWordViewport" to="." method="_on_pass_word_viewport_correctpass"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="Player"]
[editable path="Player/Head/TextBox"]
[editable path="PC2"]
[editable path="PC2/TextSubViewport"]
[editable path="AnniversaryGift"]
[editable path="PostIt"]
